trying to fix the overflow on the body

--- a/Sass/_mobile-navigation.scss
+++ b/Sass/_mobile-navigation.scss
@@ -21,7 +21,7 @@
 // hide navigation
 .hidden {
   opacity: 0;
-  transform: translateX(20rem);
+  // transform: translateX(20rem);
 }
 .nav-images {
   display: flex;
