--- a/app.css
+++ b/app.css
@@ -66,7 +66,6 @@ img {
 
 .hidden {
   opacity: 0;
-  transform: translateX(20rem);
 }
 
 .nav-images {
